<resources>
    <string name="app_name">nmedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="avatar_Desc">Avatar</string>
    <string name="menu_Desc">menu</string>
    <string name="like_Desc">like</string>
    <string name="share_Desc">share</string>
    <string name="watch_Desc">watch</string>
    <string name="remove">Remove</string>
    <string name="post_text">Post text</string>
    <string name="edit">Edit</string>
    <string name="edit_message">Edit message</string>
    <string name="Save">save</string>
    <string name="imagePen">image pen</string>
    <string name="cancelEdit">cancel edit</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_post_save">Ok</string>
    <string name="add_post">addPost</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="warning">Message cannot be displayed!</string>
    <string name="newpost">%1$s published a new post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>

</resources>