<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/between_posts"
    tools:context=".activity.FeedFragment">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/avatar_Desc"
        android:src="@drawable/ic_netology_48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@sample/posts_avatars" />

    <TextView
        android:id="@+id/author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:ellipsize="end"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/published"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="@sample/posts.json/data/author" />


    <TextView
        android:id="@+id/published"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/common_spacing"
        android:layout_marginEnd="@dimen/common_spacing"
        android:layout_marginBottom="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="@id/barrier"
        app:layout_constraintEnd_toStartOf="@id/menu"
        app:layout_constraintStart_toEndOf="@id/avatar"
        app:layout_constraintTop_toBottomOf="@id/author"
        tools:text="@sample/posts.json/data/published" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/menu"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/common_spacing"
        android:background="@android:color/transparent"
        android:contentDescription="@string/menu_Desc"
        app:icon="@drawable/more_vert_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="avatar,published,menu" />

    <TextView
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing"
        android:autoLink="web"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        tools:text="@sample/posts.json/data/content" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/unSavedPost"
        app:layout_constraintTop_toBottomOf="@+id/barrier"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/sync_problem_48"
        android:background="@android:color/transparent"
        />

    <ImageButton
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="@dimen/spacing_4dp"
        android:src="@drawable/sky"
        app:layout_constraintTop_toBottomOf="@+id/content"
        tools:src="@drawable/sky" />

    <ImageView
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/videoView"
        app:layout_constraintStart_toStartOf="@id/videoView"
        app:layout_constraintEnd_toEndOf="@id/videoView"
        android:src="@drawable/ic_play_circle_24"
        app:layout_constraintTop_toTopOf="@id/videoView"
        tools:layout_editor_absoluteX="170dp"
        tools:src="@drawable/ic_play_circle_24" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/groupVideo"
        app:constraint_referenced_ids="videoView, buttonPlay"
        android:visibility="gone"
        />

    <ImageButton
        android:id="@+id/attachmentImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/videoView"
        android:visibility="gone"
        android:background="@android:color/transparent"
        tools:src="@drawable/sky" />

    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/photoImage"
        android:layout_marginTop="@dimen/spacing_4dp"
        app:layout_constraintTop_toBottomOf="@id/attachmentImage"
        android:background="@android:color/transparent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/like"
        style="@style/Widget.AppTheme.LikeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_4dp"
        android:background="@android:color/transparent"
        android:checkable="true"
        android:contentDescription="@string/like_Desc"
        app:icon="@drawable/ic_like_selector"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photoImage" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/share"
        style="@style/Widget.AppTheme.IconButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/between_posts"
        android:background="@android:color/transparent"
        android:contentDescription="@string/share_Desc"
        app:icon="@drawable/share_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/like" />

    <TextView
        android:id="@+id/watchCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/like"
        tools:text="@sample/posts.json/data/watch" />

    <ImageView
        android:id="@+id/watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_4dp"
        android:contentDescription="@string/watch_Desc"
        android:src="@drawable/remove_red_eye_24"
        app:layout_constraintEnd_toStartOf="@id/watchCount"
        app:layout_constraintTop_toTopOf="@id/like" />

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/groupPost"
        app:constraint_referenced_ids="avatar, author, published, content"
        />

</androidx.constraintlayout.widget.ConstraintLayout>